5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1791_1593.log
== TEST (2019-05-29 14:07:36) 
-- CODE:
from numpy import*
n = array(eval(input("": "")))

j=0
k=0

while(n > 0):
	if(n[0] * 1):
		
-- ERROR:
File "XXXX", line 2
    n = array(eval(input("": "")))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:34) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j=0
k=0
i=0

while(n > 0):
	if(vet[0]):
		k= vet[0] * 1
		l = sum(k)
	elif(vet[1])
		j = vet[1] * 2
		l = sum(j)
		
o = (sum/size(n)
print(round(o,2))

-- ERROR:
File "XXXX", line 12
    elif(vet[1])
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:14:56) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j=0
k=0
i=0

while(n > 0):
	if(vet[0]):
		k= vet[0] * 1
		l = sum(k)
	elif(vet[1]):
		j = vet[1] * 2
		l = sum(j)
		
o = (sum/size(n)
print(round(o,2))

-- ERROR:
File "XXXX", line 17
    print(round(o,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:15:19) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j=0
k=0
i=0

while(n > 0):
	if(vet[0]):
		k= vet[0] * 1
		l = sum(k)
	elif(vet[1]):
		j = vet[1] * 2
		l = sum(j)
		
o = (sum/size(n)
print round(o,2)

-- ERROR:
File "XXXX", line 17
    print round(o,2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:15:36) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j=0
k=0
i=0

while(n > 0):
	if(vet[0]):
		k= vet[0] * 1
		l = sum(k)
	elif(vet[1]):
		j = vet[1] * 2
		l = sum(j)
		
print (sum/size(n)

-- ERROR:
File "XXXX", line 17
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:15:43) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j=0
k=0
i=0

while(n > 0):
	if(vet[0]):
		k= vet[0] * 1
		l = sum(k)
	elif(vet[1]):
		j = vet[1] * 2
		l = sum(j)
		
print (sum/size(n)
-- ERROR:
File "XXXX", line 17
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:14) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j=0
k=0
i=0

while(n > 0):
	if(vet[0]):
		k= vet[0] * 1
		l = sum(k)
	elif(vet[1]):
		j = vet[1] * 2
		l = sum(j)
		
print (sum(l)/size(n)
-- ERROR:
File "XXXX", line 17
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:08) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j=0
k=0
i=0

while(n > 0):
	if(vet[0]):
		k= vet[0] * 1
		l = sum(k)
	elif(vet[1]):
		j = vet[1] * 2
		l = sum(j)
		
print (sum(l)/size(n)
-- ERROR:
File "XXXX", line 17
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:47) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j=0
k=0
i=0

while(n > 0):
	if(n[0]):
		k= n[0] * 1
		l = sum(k)
	elif(n[1]):
		j = vet[1] * 2
		l = sum(j)
		
print (sum(l)/size(n)
-- ERROR:
File "XXXX", line 17
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:35:57) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j=0
k=0
i=0

while(n > 0):
	if(n[0]):
		k= n[0] * 1
		l = sum(k)
	elif(n[1]):
		j = vet[1] * 2
		l = sum(j)
		
print (l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:23) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j=0
k=0
i=0

while(n < size(j)):
	if(n[0]):
		k= n[0] * 1
		l = sum(k)
	elif(n[1]):
		j = vet[1] * 2
		l = sum(j)
		
print (l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:06) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j= size(n)
k=0
i=0

while(n < size(j)):
	if(n[0]):
		k= n[0] * 1
		l = sum(k)
	elif(n[1]):
		j = vet[1] * 2
		l = sum(j)
		
print (l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:51) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j= size(n)
k=0
i=0

while(n < size(j)):
	if(n[0]):
		k= n[0] * 1
		l = sum(k)
	elif(n[1]):
		j = vet[1] * 2
		l = sum(j)
		
print (l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:28) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j= size(n)
k=0
i=0

while(n < size(j)):
	if(n[0]):
		k= n[0] * 1
		l = sum(k)
	elif(n[1]):
		j = vet[1] * 2
		l = sum(i)
		
print (l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:45) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j= size(n)
k=0
i=0

while(n < size(j)):
	if(n[0]):
		k= n[0] * 1
		l = sum(k)
	elif(n[1]):
		j = vet[1] * 2
		l = sum(k)
		
print (l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:48) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j= size(n)
k=0
i=0

while(n < size(j)):
	if(n[0]):
		k= n[0] * 1
		l = sum(k)
	elif(n[1]):
		j = vet[1] * 2
		l = sum(k)
		
print (l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:41:18) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j= size(n)
k=0
i=0

while(n < size(j)):
	if(n[0]):
		k= n[0] * 1
		l = sum(k)
	elif(n[1]):
		j = vet[1] * 2
		l = sum(k)
		
print (l)
-- EXECUTION TIME:
0.395271
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1593/main.py", line 8, in <module>
    while(n < size(j)):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 12:35:13) 
-- CODE:
from numpy import*
n = array(eval(input("" "")))

j= size(n)
k=0
i=0

while(n < size(j)):
	if(n[0]):
		k= n[0] * 1
		l = sum(k)
	elif(n[1]):
		j = vet[1] * 2
		l = sum(k)
		
print (l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
